# Highscores-Server

./: .gitignore  README.md  pyproject.toml  run.sh
Example Unity Project/Assets/: UploadData.cs
Example Unity Project/Assets/Scenes/: SampleScene.unity
Example Unity Project/ProjectSettings/: ProjectSettings.asset
Example Unity Project/Temp/: UnityTempFile-d5b755def2e4314aab172a388f0a58d6
Example Unity Project/Temp/__Backupscenes/: 0.backup
server/: __init__.py  api.py  auth.py  config.py  extensions.py  models.py  views.py
server/static/: style.sass
server/static/js/: main.js
server/static/sass/: style.sass
server/templates/: about.html  account.html  auth.html  base.html  error.html  scores.html
