[tool.poetry]
name = "highscores-server"
version = "0.1.0"
description = "Server (and website) to store and display Highscores of the players who completed the game"
authors = ["Fluffy-Bean <michal-gdula@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "highscores_server"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-SQLAlchemy = "^3.0.3"
flask-wtf = "^1.1.1"
flask-caching = "^2.0.2"
flask-migrate = "^4.0.4"
gunicorn = "^20.1.0"
flask-assets = "^2.0"
libsass = "^0.22.0"
jsmin = "^3.0.1"
cssmin = "^0.2.0"
flask-login = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
